# caseinterview-wiratama-abisatya

./: .gitignore  AUTHORS.rst  CHANGES.rst  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  development-docker.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pytest-full.ini  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.dev.yml  postCreateCommand.sh
.github/workflows/: action.yml
alembic/: env.py  readme.md  script.py.mako
alembic/versions/: README
docs/: conf.py  index.rst
docs/api/: openapi.yml
pyramid_app_caseinterview/: __init__.py  authorization.py  routes.py
pyramid_app_caseinterview/models/: __init__.py  depthseries.py  timeseries.py
pyramid_app_caseinterview/scripts/: __init__.py  initializedb.py
pyramid_app_caseinterview/templates/: home.pug
pyramid_app_caseinterview/views/: __init__.py  api.py  downloader.py  home.py  notfound.py  serialization.py
tests/: conftest.py  helpers.py  test_functional.py  testing.ini
